# SkinToneClassifier

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  _config.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  wiki.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  q-a.md
.github/workflows/: python-publish.yml  test.yml  toc.yml
docs/: index.md
skin-tone-classifier/: main.py
src/: main.py
src/stone/: __init__.py  __main__.py  api.py  image.py  package.py  utils.py
tests/: test_utils.py
